Removed cruft, refactored a bit
